app/styles/main.scss
// bower:scss
// endbower

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  background: #85959e;
  color: #1a1e20;
  font-family: 'Lato', Helvetica, Arial, sans-serif;
  font-size: 17px;
  line-height: 1.5em;
  margin: 8px;
}

a {
  text-decoration: none;
  color: inherit;
}

h1, h2, h3 {
  text-transform: uppercase;
  font-weight: 300;
}

h1 {
  font-size: 42px;
  letter-spacing: 5px;
  line-height: 1.1em
}

h4, thead th {
  text-transform: uppercase;
  font-size: 13px;
}

thead th {
  font-weight: 700;
  text-align: left;
}

strong {
  font-weight: 700;
}

#loading {
  position: absolute;
  left: 33.33%; top: 50%;
  margin: -125px 0 0 -107px;
  width: 320px; height: 250px;
  padding: 0 15px;
  text-align: left;
  color: #fff;
}

#main {
  display: none;
  position: relative;

  #description {
    clear: both;
  }

  #notes {
    position: absolute;
    bottom: 0;
    font-size: 12px;
    line-height: 1.2em;
    padding: 0 30px;
    color: #999;
    a { text-decoration: underline; }
  }
}

header, #controls {
  text-align: center;
}

header p.what {
  text-transform: uppercase;
  font-size: 13px;
  margin: -22px 0 30px 0;
  a {
    color: #f0d95b;
    &:hover { text-decoration: underline; }
  }
}

form {
  line-height: 2em;
}

input[type="radio"] {
  display: none;
  & + label {
    white-space: nowrap;
    padding: 3px 11px;
    margin: 0 1px;
    background: #75858e;
    border-radius: 5px;
    &:hover {
      background: #65757e;
    }
  }
  &:checked + label {
    background: #55656e;
    color: #fff;
  }
}

#exhibit {
  overflow: hidden;
  margin-bottom: 50px;
  .instruction {
    margin-top: -6px;
  }
}

.bubble.chart {
  margin-top: -80px;

  .axis path {
    fill: none;
  }
  .axis line {
    stroke: #a6b1b7;
  }
  .axis text {
    fill: #fff;
    font-size: 11px;
    font-weight: 300;
    &.label {
      font-size: 14px;
      font-weight: 700;
    }
  }

  line.guide {
    fill: none;
    stroke: #fff;
    stroke-width: 2px;
    stroke-linecap: round;
  }

  text.guide {
    fill: #fff;
    text-transform: uppercase;
    font-weight: 300;
    font-size: 11px;
  }

  circle.bubble {
    fill: #afab6e;
    fill: rgba(217,193,63,.5);
    stroke: #d9c13f;
    stroke-width: 1px;
    -webkit-transition: opacity 300ms;
    -moz-transition: opacity 300ms;
    -ms-transition: opacity 300ms;
    -o-transition: opacity 300ms;
    transition: opacity 300ms;
    &.highlighted {
      fill: #d9c13f;
    }
    &.disabled {
      opacity: .25;
    }
  }

  path.voronoi {
    fill: none;
    pointer-events: all;
  }
}

.bar-chart {
  border-collapse: collapse;
  border-spacing: 0;
  margin: 25px -8px 0 -8px;

  thead {
    background: #55656e;
    color: #fff;
  }

  tr:not(.school-view-row) td, th {
    padding: 6px 11px;
    white-space: nowrap;
    line-height: 1em;
  }

  tr.filtered {
    display: none;
  }

  tbody tr {
    &.odd {
      background-color: #75858e;
    }
    &:not(.school-view-row) {
      cursor: pointer;
      &:hover {
        background: #65757e;
      }

      td {
        font-size: 14px;
        &:last-child {
          width: 100%;
          font-weight: 700;
          position: relative;
        }
      }
    }
  }

  div.wrapper {
    position: absolute;
    top: 0;
    left: 0;
    right: 68px;
  }

  div.bar {
    z-index: 10;
    display: block;
    position: relative;
    top: 6px;
  }

  span.line {
    display: inline-block;
    position: absolute;
    top: 0;
    height: 26px;
    width: 2px;
    margin-left: -1px;
    &:before, &:after {
      display: block;
      content: "";
      width: 2px;
      height: 4px;
      background: #b5c5ce;
      // background: rgba(255,255,255,.5);
      border-radius: 0 0 2px 2px;
    }
    &:after {
      position: absolute;
      bottom: 0px;
      border-radius: 2px 2px 0 0;
    }
  }

  span.rect {
    background: #d9c13f;
    display: inline-block;
    height: 11px;
    margin-right: 6px;
    border-radius: 2px;
  }

  @media screen and (max-width: 599px) {
    td:nth-child(2), th:nth-child(2) {
      display: none;
    }
    span.rect, span.line { display: none }
    td, th {
      white-space: normal;
      width: 50%;
    }
  }
}

.tooltip {
  margin-top: -115px;
  display: none;
  width: 420px;
  position: absolute;
  background: #55656e;
  color: #fff;
  padding: 11px 15px;
  border-radius: 15px;
  border: 3px solid #d9c13f;
  font-size: 14px;
  z-index: 1000;
  -moz-box-shadow:    0 5px 8px rgba(26, 30, 32, .25);
  -webkit-box-shadow: 0 5px 8px rgba(26, 30, 32, .25);
  box-shadow:         0 5px 8px rgba(26, 30, 32, .25);
  h3 {
    color: #d9c13f;
    font-size: 21px;
    margin: 5px 0 11px 0;
  }
  p {
    margin: 0;
    &.instruction {
      color: #d9c13f;
      margin: 8px 0 4px 0;
      font-weight: 300;
    }
  }
  .arrow, .arrow:after {
    display: block;
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    border-bottom: 15px solid #d9c13f;
  }
  .arrow {
    top: -18px;
    &:after {
      top: 5px;
      left: -15px;
      border-bottom-color: #55656e;
    }
  }
}

.instruction {
  font-style: italic;
  text-transform: uppercase;
  text-align: center;
}

.school-view-row .school-view .container {
  margin: 0 14px;
}

.school-view {
  display: none;
  background: #55656e;
  color: #fff;
  margin: 0 -13px;
  padding: 0 24px;
  position: relative;
  -moz-box-shadow:    inset 0 2px 5px rgba(26, 30, 32, .5);
  -webkit-box-shadow: inset 0 2px 5px rgba(26, 30, 32, .5);
  box-shadow:         inset 0 2px 5px rgba(26, 30, 32, .5);

  .container {
    max-width: 800px;
    margin: 0 auto;
    padding: 11px 0;
  }

  .column {
    width: 50%;
    float: left;
    &.single {
      width: 100%;
      padding-bottom: 22px;
    }
    @media screen and (max-width: 599px) {
      width: 100%;
      float: none;
    }
  }

  h2 {
    margin-bottom: .35em;
  }

  ul {
    padding: 0;
  }

  li {
    list-style: none;
    font-size: 14px;
    span.amount {
      display: inline-block;
      width: 70px;
    }
  }

  .amount {
    font-weight: 700;
    color: #d9c13f;
    fill: #d9c13f;
  }

  div.chart {
    width: 70px;
    height: 70px;
    float: left;
    margin: -1px 13px -2px -1px;
    path.arc {
      fill: #85959e;
      &:first-child {
        fill: #d9c13f;
      }
    }
  }
}

a.button {
  display: block;
  color: #d9c13f;
  font-weight: 300;
  border: 1px solid #d9c13f;
  text-align: center;
  border-radius: 5px;
  &:hover {
    background: rgba(217, 193, 63, .15);
  }
  &.learndc {
    width: 180px;
    clear: both;
    margin-bottom: 22px;
  }
}

button.close {
  font-family: inherit;
  background: transparent;
  border: none;
  outline: none;
  font-size: 33px;
  font-weight: 300;
  position: absolute;
  top: 0;
  right: 15px;
  cursor: pointer;
  &:hover {
    color: #d9c13f;
  }
}

#description {
  padding: 22px 11px;
  max-width: 822px;
  margin: 0 auto;
  p { max-width: 540px; }
  h4 { color: #f0d95b; border-top: 2px solid #f0d95b; margin-top: 3em; }
  a.button {
    width: 280px;
    color: #f0d95b;
    border-color: #f0d95b;
  }
  p.logos {
    text-align: center;
    img { margin: 3em 22px 0 22px; }
  }
}

/* Modified version of SpinKit */
/* https://github.com/tobiasahlin/SpinKit */
/* Copyright (c) 2014 Tobias Ahlin */
/* MIT license */

.spinner {
  display: inline-block;
  height: 30px;
  text-align: center;
  font-size: 10px;

  & > div {
    background-color: #ddd;
    height: 100%;
    width: 3px;
    display: inline-block;
    border-radius: 3px;
    
    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
    animation: stretchdelay 1.2s infinite ease-in-out;
  }

  .rect2 {
    -webkit-animation-delay: -1.1s;
    animation-delay: -1.1s;
  }

  .rect3 {
    -webkit-animation-delay: -1.0s;
    animation-delay: -1.0s;
  }

  .rect4 {
    -webkit-animation-delay: -0.9s;
    animation-delay: -0.9s;
  }

  .rect5 {
    -webkit-animation-delay: -0.8s;
    animation-delay: -0.8s;
  }
}

@-webkit-keyframes stretchdelay {
  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
  20% { -webkit-transform: scaleY(1.0) }
}

@keyframes stretchdelay {
  0%, 40%, 100% { 
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }  20% { 
    transform: scaleY(1.0);
    -webkit-transform: scaleY(1.0);
  }
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

